메이븐 설정 및 게임 추가

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -124,7 +124,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
                         <!-- <img src="/img/koscom.gif"> -->
-                        <h1><img width="100" height="100" src="/img/koscom.png"/>PlayCHECK</h1>
+                        <h1><img width="50" height="50" src="/img/koscomci.png"/>PlayCHECK</h1>
                         <hr class="small">
                         <span class="subheading">즐기면서 배우는 투자분석 추천서비스</span>
                     </div>
