--- a/src/main/webapp/game.html
+++ b/src/main/webapp/game.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>시세정보 조이</title>
+    <title>투자분석 PlayCHECK</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -95,20 +95,20 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="/index.html">Home</a>
                     </li>
                     <!-- <li>
                         <a href="about.html">About</a>
                     </li> -->
                     <li>
-                        <a href="game.html">Lucky Game</a>
-                    </li>
-                    <!-- <li>
-                        <a href="post.html">Sample Post</a>
+                        <a href="/game.html">Lucky Game</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
-                    </li> -->
+                        <a href="/post.html">My Menu</a>
+                    </li>
+                    <li>
+                        <a href="/contact.html">Contact</a>
+                    </li> 
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
