--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -101,13 +101,16 @@
                         <a href="about.html">About</a>
                     </li> -->
                     <li>
-                        <a href="/game.html">Lucky Game</a>
+                        <a href="/game.html">Lucky Game 1</a>
                     </li>
                     <li>
-                        <a href="post.html">My Menu</a>
+                        <a href="/game2.html">Lucky Game 2</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="/post.html">My Menu</a>
+                    </li>
+                    <li>
+                        <a href="/contact.html">Contact</a>
                     </li> 
                 </ul>
             </div>
