--- a/src/main/webapp/game.html
+++ b/src/main/webapp/game.html
@@ -126,7 +126,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1><img width="50" height="50" src="/img/koscomci.png"/>투자게임</h1>
+                        <h1><img width="50" height="50" src="/img/koscomci.png"/>투자게임 1</h1>
                         <hr class="small">
                         <span class="subheading">Fortune cookie</span>
                     </div>
