--- a/src/main/webapp/contact.html
+++ b/src/main/webapp/contact.html
@@ -52,14 +52,17 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="/game.html">Lucky Game 1</a>
                     </li>
                     <li>
-                        <a href="post.html">Sample Post</a>
+                        <a href="/game2.html">Lucky Game 2</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="/post.html">My Menu</a>
                     </li>
+                    <li>
+                        <a href="/contact.html">Contact</a>
+                    </li> 
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
